# EARA2022-Figures

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.py
.devcontainer/: devcontainer.json
.github/workflows/: build_image.yml
eara2022/: __init__.py
eara2022/scripts/: __init__.py  changbaishan_fwea18_ak135.py  changbaishan_fwea18_base.py  changbaishan_fwea18_iasp91.py  changbaishan_models_ak135_vp.py  changbaishan_models_ak135_vs.py  changbaishan_models_base.py  changbaishan_models_eara2022_vp.py  changbaishan_models_eara2022_vs.py  changbaishan_models_stw105_vp.py  changbaishan_models_stw105_vs.py  con_base.py  con_vp.py  con_vp_ak135.py  con_vp_eara2022.py  con_vp_stw105.py  con_vs.py  con_vs_ak135.py  con_vs_eara2022.py  con_vs_stw105.py  event_station_distribution.py  geo_map.py  hist.py  misfit.py  paraview.py  psf.py  radial.py  slab.py  slab_base.py  slab_vp.py  slab_vp_ak135.py  slab_vp_eara2022.py  slab_vp_stw105.py  slab_vs.py  slab_vs_ak135.py  slab_vs_eara2022.py  slab_vs_stw105.py  vol_base.py  vol_vp.py  vol_vp_ak135.py  (+17 more)
eara2022/scripts/utils/: vpvs_base.py
eara2022/utils/: __init__.py  cache.py  gcmt.py  load_files.py  plot.py  project_ehb.py  psf.py  slice.py
fig/: changbaishan_fwea18_ak135.eps  changbaishan_fwea18_iasp91.eps
notebooks/: find_1dref_eara.ipynb  isc_ehb.ipynb
