[tool.poetry]
name = "eara2022"
version = "0.1.0"
description = ""
authors = ["ziyixi <ziyixi@mail.ustc.edu.cn>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
pygmt = "^0.6.0"
xarray = "^2022.3.0"
obspy = "^1.3.0"
numba = "^0.55.1"
pyasdf = "^0.7.5"
scipy = "^1.8.0"
pyproj = "^3.3.0"
numpy = "~1.21"
seisflow = {git = "https://github.com/ziyixi/seisflow.git", rev = "master"}

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pylint = "^2.12.2"
ipython = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
